--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,28 +1,29 @@
-.App {
-  text-align: center;
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+  #root {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+    .App {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+      .highlightsList, .projectsList {
+        width: 50%;
+        height: auto;
+        display: inline-block;
+        vertical-align: top;
+        overflow: scroll;
+        -webkit-overflow-scrolling: touch;
+      }
+      .highlightsList h5 {
+        margin-top: 50px;
+      }
