--- a/app/src/App.css
+++ b/app/src/App.css
@@ -7,23 +7,31 @@ body {
   #root {
     width: 100%;
     height: 100%;
-    overflow: hidden;
   }
 
     .App {
       width: 100%;
       height: 100%;
-      overflow: hidden;
     }
 
-      .highlightsList, .projectsList {
+      .Projects, .Highlights {
         width: 50%;
-        height: auto;
         display: inline-block;
         vertical-align: top;
-        overflow: scroll;
-        -webkit-overflow-scrolling: touch;
       }
-      .highlightsList h5 {
-        margin-top: 50px;
-      }
+
+        .Projects > .title, .Highlights > .title {
+          height: 100px;
+          width: 100%;
+          vertical-align: center;
+          line-height: 100px;
+          padding: 0 40px;
+          border: 1px dashed red;
+        }
+
+        .highlightsList, .projectsList {
+          height: calc(100vh - 100px);
+          padding: 0 40px;
+          overflow-y: scroll;
+          -webkit-overflow-scrolling: touch;
+        }
