--- a/app/src/highlights/Highlights.css
+++ b/app/src/highlights/Highlights.css
@@ -2,5 +2,13 @@
 
 }
   .highlightsList > div {
-    margin: 50px 0;
+    margin-bottom: 30px;
   }
+
+    .highlightsList > div > h3 {
+      margin-bottom: 5px;
+    }
+
+    .highlightsList > div > p {
+      line-height: 1.4;
+    }
