--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,23 @@
+h1 {
+	font-family: 'Lobster', cursive;
+	font-weight: 400;
+}
+h2 {
+	font-family: 'Crimson Text', serif;
+	font-weight: 600;
+}
+h3, p, li {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+	line-height: 1.4;
+}
+p>b {
+	font-weight: 700;
+}
+a{
+	color: inherit;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -55,4 +75,8 @@ body {
           padding: 60px 40px;
           overflow-y: scroll;
           -webkit-overflow-scrolling: touch;
+        }
+
+        .highlightsList a, .projectsList a, .aboutContent a {
+          border-bottom: 1px solid #f9df86;
         }
