--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,82 +1,74 @@
 h1 {
-	font-family: 'Lobster', cursive;
-	font-weight: 400;
-}
+  font-family: 'Lobster', cursive;
+  font-weight: 400;
+  color: black; }
+
 h2 {
-	font-family: 'Crimson Text', serif;
-	font-weight: 600;
-}
-h3, p, li {
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
-	line-height: 1.4;
-}
-p>b {
-	font-weight: 700;
-}
-a{
-	color: inherit;
-}
+  font-family: 'Crimson Text', serif;
+  font-weight: 600;
+  color: black; }
+
+h3, p, li, a {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  line-height: 1.4;
+  color: black; }
+
+p > b {
+  font-weight: 700; }
+
+a {
+  transition: opacity .3s ease-in-out; }
+  a:hover {
+    opacity: .6; }
+
+p > a {
+  color: inherit;
+  border-bottom: 1px solid #f9df86;
+  transition: border-color .3s ease-in-out; }
+  p > a:hover {
+    border-bottom: 1px solid #fc3c3c; }
 
 body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
-}
-
-  #root {
+  overflow: hidden; }
+  body #root {
     width: 100%;
-    height: 100%;
-  }
-
-    .App {
+    height: 100%; }
+    body #root .App {
       width: 100%;
-      height: 100%;
-    }
-
-      .Projects, .Highlights {
+      height: 100%; }
+      body #root .App .Projects, body #root .App .Highlights {
         display: inline-block;
-        vertical-align: top;
-      }
-      .Projects {
-        width: 40%;
-      }
-      .Highlights {
-        width: 60%;
-      }
-
-        .Projects > .title {
-          height: 80px;
-          width: 100%;
-          vertical-align: center;
-          line-height: 80px;
-          padding: 0 40px;
-        }
-
-        .tabTitle {
-          height: 80px;
-          width: 100%;
-          vertical-align: center;
-          line-height: 80px;
-          padding: 0 40px;
-          cursor: pointer;
-        }
-          .tabTitle > li:hover {
-            color: grey;
-          }
-
-          .tabTitle > li {
-            width: 50%;
-            display: inline-block;
-          }
-
-        .highlightsList, .projectsList, .aboutContent {
+        vertical-align: top; }
+        body #root .App .Projects .highlightsList, body #root .App .Projects .projectsList, body #root .App .Projects .aboutContent, body #root .App .Highlights .highlightsList, body #root .App .Highlights .projectsList, body #root .App .Highlights .aboutContent {
           height: calc(100vh - 80px);
           padding: 60px 40px;
           overflow-y: scroll;
-          -webkit-overflow-scrolling: touch;
-        }
-
-        .highlightsList a, .projectsList a, .aboutContent a {
-          border-bottom: 1px solid #f9df86;
-        }
+          -webkit-overflow-scrolling: touch; }
+      body #root .App .Projects {
+        width: 40%; }
+        body #root .App .Projects .title {
+          height: 80px;
+          width: 100%;
+          vertical-align: center;
+          line-height: 80px;
+          padding: 0 40px; }
+      body #root .App .Highlights {
+        width: 60%; }
+        body #root .App .Highlights .tabTitle {
+          height: 80px;
+          width: 100%;
+          vertical-align: center;
+          padding: 0 40px; }
+          body #root .App .Highlights .tabTitle li {
+            width: 50%;
+            display: inline-block;
+            line-height: 80px;
+            cursor: pointer; }
+            body #root .App .Highlights .tabTitle li:hover h2 {
+              color: grey; }
+            body #root .App .Highlights .tabTitle li[aria-selected='true'] h2 {
+              border-bottom: 1px solid black;
+              opacity: .6; }
