--- a/app/src/highlights/Highlights.css
+++ b/app/src/highlights/Highlights.css
@@ -1,14 +1,6 @@
-.highlightsList {
-
-}
-  .highlightsList > div {
-    margin-bottom: 30px;
-  }
-
-    .highlightsList > div > h3 {
-      margin-bottom: 5px;
-    }
-
-    .highlightsList > div > p {
-      line-height: 1.4;
-    }
+.highlightsList div {
+  margin-bottom: 30px; }
+  .highlightsList div h3 {
+    margin-bottom: 5px; }
+  .highlightsList div p {
+    line-height: 1.4; }
