--- a/app/src/projects-list/ProjectsList.css
+++ b/app/src/projects-list/ProjectsList.css
@@ -1,21 +1,16 @@
-.projectsList {
-
-}
-  .projectsList > div {
-    margin-bottom: 30px;
-  }
-
-    .projectsList > div > h3 {
-      margin-bottom: 5px;
-    }
-
-    .projectsList > div > h3 > span {
+.projectsList div {
+  margin-bottom: 30px; }
+  .projectsList div h3 {
+    margin-bottom: 5px; }
+    .projectsList div h3 span {
       font-size: 12px;
       color: grey;
       vertical-align: top;
-      margin-left: 5px;
-    }
-
-    .projectsList > div > p {
-      line-height: 1.4;
-    }
+      margin-left: 5px; }
+  .projectsList div p {
+    line-height: 1.4;
+    font-size: 11px; }
+  .projectsList div > a {
+    display: inline-block;
+    margin-top: 10px;
+    font-size: 13px; }
