--- a/app/src/about/About.sass
+++ b/app/src/about/About.sass
@@ -10,6 +10,10 @@
       margin-top: 20px
       display: block
       vertical-align: middle
+      transition: opacity .2s ease-in-out
+      font-size: 13px
+      &:hover
+        opacity: .5
 
       img
         width: 20px
