--- a/app/src/highlights/Highlights.sass
+++ b/app/src/highlights/Highlights.sass
@@ -2,8 +2,13 @@
   div
     margin-bottom: 30px
 
+    h2
+      margin-bottom: 7px
+      font-size: 15px
     h3
-      margin-bottom: 5px
-
+      margin-bottom: 7px
+      font-size: 11px
+      color: grey
     p
-      line-height: 1.4
+      line-height: 1.6
+      font-size: 13px
