--- a/app/src/projects-list/ProjectsList.css
+++ b/app/src/projects-list/ProjectsList.css
@@ -1,16 +1,25 @@
 .projectsList div {
   margin-bottom: 30px; }
-  .projectsList div h3 {
-    margin-bottom: 5px; }
-    .projectsList div h3 span {
+  .projectsList div h2 {
+    margin-bottom: 7px;
+    font-size: 15px; }
+    .projectsList div h2 span {
       font-size: 12px;
       color: grey;
       vertical-align: top;
       margin-left: 5px; }
   .projectsList div p {
-    line-height: 1.4;
-    font-size: 11px; }
+    line-height: 1.6;
+    font-size: 13px; }
   .projectsList div > a {
     display: inline-block;
     margin-top: 10px;
-    font-size: 13px; }
+    font-size: 13px;
+    transition: color .2s ease-in-out; }
+    .projectsList div > a:hover {
+      color: #fc3c3c;
+      opacity: 1; }
+  .projectsList div > span {
+    font-size: 11px;
+    display: block;
+    color: grey; }
