--- a/app/src/projects-list/ProjectsList.sass
+++ b/app/src/projects-list/ProjectsList.sass
@@ -1,8 +1,9 @@
 .projectsList
   div
     margin-bottom: 30px
-    h3
-      margin-bottom: 5px
+    h2
+      margin-bottom: 7px
+      font-size: 15px
       span
         font-size: 12px
         color: grey
@@ -10,10 +11,19 @@
         margin-left: 5px
 
     p
-      line-height: 1.4
-      font-size: 11px
+      line-height: 1.6
+      font-size: 13px
 
     & > a
       display: inline-block
       margin-top: 10px
       font-size: 13px
+      transition: color .2s ease-in-out
+      &:hover
+        color: #fc3c3c
+        opacity: 1
+
+    &>span
+      font-size: 11px
+      display: block
+      color: grey
