mobile styles fixed

--- a/app/src/App.sass
+++ b/app/src/App.sass
@@ -50,6 +50,8 @@ body
           padding: 20px 40px
           overflow-y: scroll
           -webkit-overflow-scrolling: touch
+          @media screen and (max-width: 699px)
+            height: calc(100vh - 200px)
 
 
       .Projects
