--- a/app/src/App.css
+++ b/app/src/App.css
@@ -42,6 +42,9 @@ body {
           padding: 20px 40px;
           overflow-y: scroll;
           -webkit-overflow-scrolling: touch; }
+          @media screen and (max-width: 699px) {
+            body #root .App .Projects .highlightsList, body #root .App .Projects .projectsList, body #root .App .Projects .aboutContent, body #root .App .Highlights .highlightsList, body #root .App .Highlights .projectsList, body #root .App .Highlights .aboutContent {
+              height: calc(100vh - 200px); } }
       body #root .App .Projects {
         width: 40%; }
         body #root .App .Projects .title {
